Robust CSV parsing, atomic writes & loan service
Add strict CSV validation and transactional writes, introduce service layer and UI error handling.

- New CsvDataException and enhanced CsvUtils: strict header/row checks, safe field parsing, atomic temporary-file write transaction with rollback, and helpers to build/read rows.
- Reworked repositories (Amigo/Objeto/Emprestimo): validate fields, enforce positive IDs, detect duplicates, stricter date/value parsing, produce consistent file content APIs and use CsvUtils.readRows.
- Added LoanService and ValidationUtils: centralize business rules (loan validation, availability handling, contact/field validation) and coordinated saving of related CSVs.
- Updated UI panels (Main, AmigosPanel, EmprestimosPanel): install LAF, show user-friendly error dialogs, use ValidationUtils and LoanService, improved accessibility labels and table header renderer, and safer combo/scroll handling.
- Added ModernTableHeaderRenderer, RegressionTests and docs/plan for hardening.
- Removed old example zip and added N3.zip archive.

These changes improve data integrity, provide clearer errors to users, and make file writes resilient to partial failures.